--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@ body {
 
 h1 {
   color: rgb(226, 80, 80);
-  margin-top: 45px;
+  margin-top: 25px;
   font-size: 50px;
 }
 
@@ -45,9 +45,18 @@ input {
   text-align: start;
   margin-right: 30px;
 }
+
+.name {
+  font: bold 50px 'lucida sans', 'trebuchet MS', 'Tahoma';
+  color: rgb(38, 209, 22);
+}
 p {
   font: bold 20px 'lucida sans', 'trebuchet MS', 'Tahoma';
   color: #fff;
+}
+p .span {
+  font: bold 20px 'lucida sans', 'trebuchet MS', 'Tahoma';
+  color: rgb(32, 247, 12);
 }
 .lenguages__item {
   font: bold 20px 'lucida sans', 'trebuchet MS', 'Tahoma';
@@ -56,6 +65,16 @@ p {
 
 /* country container */
 .flag {
-  width: 450px;
-  margin-top: 50px;
+  margin-top: 30px;
+}
+
+.country-list__flag {
+  display: flex;
+  color: rgb(226, 80, 80);
+}
+.country-list__flag .flag {
+  margin-top: 0;
+  margin-right: 15px;
+  margin-bottom: 10px;
+  width: 90px;
 }
